# dotfiles

./: .pre-commit-config.yaml  .prettierrc  README.md  flake.nix  install-local-python.sh  install.sh  pyproject.toml  tentative-install-python.sh  todo.txt
.codex/skills/dotfiles-session-notes/: SKILL.md
.codex/skills/stow-first-time-adopt/: SKILL.md
.github/workflows/: pylint.yml
cargo/.cargo/: config.toml
codex-notes/local-python-migration/: plan.md  research.md
codex-notes/local-python-uv-management/: plan.md  research.md
codex-notes/move-git-management-home-nix/: plan.md  research.md
codex-notes/use-brew-nix/: plan.md  research.md
common/git/: default.nix
dictionaries/: .gitignore  README.md  comics.toml  generate_plist.py  linguistics.toml  math-programming.toml
ec2/: ec2.nix
ec2/zsh/: default.nix
git/: .gitconfig  install.sh
home/: home.nix
home/git/: default.nix
home/ripgrep/: default.nix
home/zsh/: default.nix
issues/: backup-files.md
llm-configs/: .stow-local-ignore  AGENTS.md
llm-configs/.claude/skills/: boristane-how-i-use-claude-code  commit  daily-ops-spec-driven  hash  mckinsey-7s-analysis  workflow-guardrails
llm-configs/.codex/: skills
llm-configs/.codex/agents/: clarity-validator.toml
llm-configs/.codex/prompts/: commit.md
llm-configs/.cursor/: skills
llm-configs/my-skills/commit/: SKILL.md
python/: requirements-local_python.txt
skills/.codex/: config.base.toml  config.trust.toml.example  merge-config.sh
vscode/: .gitignore  install.sh  settings.json
vscode-scripts/: extensions
zsh/: .zshenv  .zshrc
(+39 files in other folders)
