[project]
name = "dotfiles"
version = "2026.05.30"
description = "dotfiles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pylint>=4.0.4",
]
local = [
    "bcrypt==5.0.0",
    "capstone==6.0.0a7",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "colored-traceback==0.4.2",
    "cryptography==46.0.5",
    "idna==3.11",
    "intervaltree==3.2.1",
    "invoke==2.2.1",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "packaging==26.0",
    "paramiko==4.0.0",
    "pandas>=3.0.0,<4.0.0",
    "pip==26.0.1",
    "plumbum==1.10.0",
    "podman-compose==1.5.0",
    "psutil==7.2.2",
    "pwntools==4.15.0",
    "pycparser==3.0",
    "pycryptodome==3.23.0",
    "pyelftools==0.32",
    "pygments==2.19.2",
    "pynacl==1.6.2",
    "pyserial==3.5",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "ropgadget==7.7",
    "rpyc==6.0.2",
    "ruff==0.15.1",
    "six==1.17.0",
    "sortedcontainers==2.4.0",
    "toml==0.10.2",
    "ty==0.0.17",
    "unicorn==2.1.1",
    "unix-ar==0.2.1",
    "urllib3==2.6.3",
    "zstandard==0.25.0",
]
